<resources>
    <string name="app_name">Delicacy</string>
    <string name="delicacies_categories">Delicacies Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_delicacies_application">My Delicacies Application!</string>
    <string name="enter_name_of_food">Enter Name of Food</string>
    <string name="enter_meal">Enter Meal</string>
    <string name="title_activity_meal_details">MealDetails_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="log_in">Log in</string>
    <string name="have_no_accout_yet_sign_up_now1">Have no accout yet? Sign up now1</string>
    <string name="have_no_accout_yet_sign_up_now">have_no_accout_yet_sign_up_now!</string>
    <string name="have_no_account_yet_sign_up_now">have_no_account_yet_sign_up_now</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_password">enter password</string>
    <string name="confirm_password">confirm Password</string>
    <string name="log_out">Log Out</string>
    <string name="photo">Photo</string>
</resources>