<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Create"
    android:background="@drawable/create">

    <LinearLayout
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayoutOne"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nameEdit"
            android:background="@drawable/button"
            android:hint="@string/enter_your_name"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            />

        <EditText
            android:id="@+id/emailEdit"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/white"
            android:background="@drawable/button"
            android:padding="10dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:hint="@string/enter_your_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/passWord"
            android:textColor="@color/colorPrimary"
            android:hint="@string/enter_password"
            android:padding="10dp"
            android:background="@drawable/button"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/confirmPassWord"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="13dp"
            android:textSize="20sp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:background="@drawable/mylogin"
            android:text="Sign Up"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            android:id="@+id/createUser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/firebaseProgress"
            android:textAlignment="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/loginProgressText"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:id="@+id/loginText"
            android:text="Have an Account Already? Login Now!"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>